archive/infrastructure/deployments/pipecat-daily-bot-deployment/staging/05-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipecat-daily-bot-stg
  labels:
    app: pipecat-daily-bot-stg
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: pipecat-daily-bot-stg
  template:
    metadata:
      labels:
        app: pipecat-daily-bot-stg
    spec:
      containers:
      - name: gateway
        image: nia-pipecat-bot
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
