archive/infrastructure/deployments/pipecat-daily-bot-deployment/staging/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipecat-daily-bot-stg
  namespace: pipecat-daily-bot-stg
  labels:
    app: pipecat-daily-bot-stg
spec:
  type: ClusterIP
  selector:
    app: pipecat-daily-bot-stg
  ports:
  - port: 4444
    targetPort: 4444
    protocol: TCP
    name: http
